src/lexer/snapshots/enderpy__lexer__lexer__tests__numeric-hexadecimal-9.snap
---
source: src/lexer/lexer.rs
description: "0x9"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0x9",
        ),
        start: 0,
        end: 3,
    },
]
