src/lexer/snapshots/enderpy__lexer__lexer__tests__numeric-octal-3.snap
---
source: src/lexer/lexer.rs
---
[
    Token {
        kind: Octal,
        value: Number(
            "0o3",
        ),
        start: 0,
        end: 3,
    },
]
