src/lexer/snapshots/enderpy__lexer__lexer__tests__numeric-octal-4.snap
---
source: src/lexer/lexer.rs
---
[
    Token {
        kind: Octal,
        value: Number(
            "0o4",
        ),
        start: 0,
        end: 3,
    },
]
