src/lexer/snapshots/enderpy__lexer__lexer__tests__raw-bytes-literals-6.snap
---
source: src/lexer/lexer.rs
description: "rb'''hello'''"
---
[
    Token {
        kind: RawBytes,
        value: Str(
            "rb'''hello'''",
        ),
        start: 0,
        end: 13,
    },
]
