src/lexer/snapshots/enderpy__lexer__lexer__tests__raw-f-string-literals-0.snap
---
source: src/lexer/lexer.rs
description: "rf\"hello\""
---
[
    Token {
        kind: RawFString,
        value: Str(
            "rf\"hello\"",
        ),
        start: 0,
        end: 9,
    },
]
